@@ -1,4 +1,5 @@
-<configure xmlns="http://namespaces.zope.org/zope"
+<configure package="z3c.pt"
+           xmlns="http://namespaces.zope.org/zope"
            xmlns:zcml="http://namespaces.zope.org/zcml">
 
   <include package="zope.component" file="meta.zcml" />
